--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     </div>
 
                     <!-- Special Offer Card -->
-                    <div class="bg-gradient-to-br from-clay-brown to-subtle-red rounded-2xl shadow-lg overflow-hidden transform hover:scale-105 transition-all duration-300">
+                    <!-- <div class="bg-gradient-to-br from-clay-brown to-subtle-red rounded-2xl shadow-lg overflow-hidden transform hover:scale-105 transition-all duration-300">
                         <div class="p-8 text-center text-white">
                             <div class="w-20 h-20 bg-white/20 rounded-full flex items-center justify-center mx-auto mb-6">
                                 <i class="fas fa-gift text-3xl"></i>
@@ -334,7 +334,7 @@
                             <div class="text-2xl font-bold">₹999</div>
                             <div class="text-sm opacity-80 line-through">₹1,199</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- CTA Section -->
